finalizes nestjs-demo-backen v01 with current RS Tech Hub Nestjs Modlues

--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.9",
     "@nestjs/throttler": "^6.4.0",
-    "@rs-tech-hub/nestjs-account-starter": "1.0.0",
-    "@rs-tech-hub/nestjs-auth-core": "1.0.0",
-    "@rs-tech-hub/nestjs-auth-starter": "1.0.1",
-    "@rs-tech-hub/nestjs-clock": "1.0.0",
-    "@rs-tech-hub/nestjs-common-interceptors": "1.0.1",
-    "@rs-tech-hub/nestjs-prisma": "1.0.0",
-    "@rs-tech-hub/nestjs-profile": "1.0.0",
-    "@rs-tech-hub/nestjs-service-operation": "1.0.0",
-    "@rs-tech-hub/nestjs-user": "1.0.0",
+    "@rs-tech-hub/nestjs-account-starter": "^1.0.1",
+    "@rs-tech-hub/nestjs-auth-core": "^1.0.0",
+    "@rs-tech-hub/nestjs-auth-starter": "^1.0.3",
+    "@rs-tech-hub/nestjs-clock": "^1.0.0",
+    "@rs-tech-hub/nestjs-common-interceptors": "^1.0.1",
+    "@rs-tech-hub/nestjs-prisma": "^1.0.0",
+    "@rs-tech-hub/nestjs-profile": "^1.0.1",
+    "@rs-tech-hub/nestjs-service-operation": "^1.0.0",
+    "@rs-tech-hub/nestjs-test-starter": "^1.0.2",
+    "@rs-tech-hub/nestjs-user": "^1.0.1",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
